PROG: Changed cnetref resolutionHigh failure test to run using a much smaller local data set. References #2149.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7347 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetref/tsts/resolutionHigh/Makefile
+++ b/isis/src/control/apps/cnetref/tsts/resolutionHigh/Makefile
@@ -14,9 +14,10 @@ commands:
 	  onet=$(OUTPUT)/truth.net \
 	  networkid=DefaultTruth \
 	  Description=RefByResolutionHigh > /dev/null;
-	  $(RM) $(OUTPUT)/cube.lis;
-	$(APPNAME) fromlist=$(INPUT)/apolloList.lis \
-	  cnet=$(INPUT)/apolloSeed.net \
+	$(APPNAME) fromlist=$(OUTPUT)/cube.lis \
+	  cnet=$(INPUT)/autoseed_edit.pvl \
 	  criteria=resolution \
 	  type=high \
-	  onet=$(OUTPUT)/apolloTruth.net > /dev/null;
+	  onet=$(OUTPUT)/autoseed_edit_truth.net \
+	  Description=RefByResolutionHighFail > /dev/null;
+	  $(RM) $(OUTPUT)/cube.lis;
