Regarding public release: added Debian8 and Ubuntu14_04 config files to get Qt5WebEngine's snappy and srtp dependencies into 3rdParty and patched. Updated 3rdParty Makefile to patch these libraries' rpaths to origin.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7355 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/3rdParty/Makefile
+++ b/isis/3rdParty/Makefile
@@ -27,6 +27,21 @@ libs:
 	   done;                                                             \
 	  fi;                                                                \
         done;                                                                \
+	for library in $(PATCHLIBS); do                                      \
+	  $(INSTALL3P) $(INSTALL3POPTS) $$library $(ISISROOT)/3rdParty/lib/; \
+	  echo $(CURTIMESTAMP) "  Installing [$$library]";                   \
+	  if [ "$(HOST_ARCH)" == "Linux" ]; then                             \
+	    for file in $$library; do                                        \
+	      localFile=$(ISISROOT)/3rdParty/lib/`basename $$file`;          \
+	      if [ ! -L "$$localFile" ]; then                                \
+	        dollar='$$';                                                 \
+	        newRpath=`echo "$${dollar}ORIGIN"`;                          \
+	        echo $(CURTIMESTAMP) "    Patching [" `basename $$file` "]"; \
+	        $(PATCHELF) --set-rpath "$$newRpath" $$localFile;            \
+	     fi;                                                             \
+	   done;                                                             \
+	  fi;                                                                \
+        done;                                                                \
 	if [ "$(HOST_ARCH)" == "Darwin" ]; then                              \
 	  chmod u+w $(ISISROOT)/3rdParty/lib/libcrypto.*.dylib;              \
 	  chmod u+w $(ISISROOT)/3rdParty/lib/libssl.*.dylib;                 \
