Turned off documnetation warning messages that were getting ignored and cluttering build output. m04585
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7489 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/Object/Makefile
+++ b/isis/src/docsys/Object/Makefile
@@ -89,10 +89,10 @@ conf:
 	  echo "WARN_NO_PARAMDOC       = YES"                        >> build/Programmer_temp.conf; \
         else \
 	  echo "QUIET                  = YES"                        >> build/Programmer_temp.conf; \
-	  echo "WARNINGS               = YES"                        >> build/Programmer_temp.conf; \
-	  echo "WARN_IF_UNDOCUMENTED   = YES"                        >> build/Programmer_temp.conf; \
-	  echo "WARN_IF_DOC_ERROR      = YES"                        >> build/Programmer_temp.conf; \
-	  echo "WARN_NO_PARAMDOC       = YES"                        >> build/Programmer_temp.conf; \
+	  echo "WARNINGS               = NO"                         >> build/Programmer_temp.conf; \
+	  echo "WARN_IF_UNDOCUMENTED   = NO"                         >> build/Programmer_temp.conf; \
+	  echo "WARN_IF_DOC_ERROR      = NO"                         >> build/Programmer_temp.conf; \
+	  echo "WARN_NO_PARAMDOC       = NO"                         >> build/Programmer_temp.conf; \
 	fi
 
 	if [[ "$(DOT_PATH)" != "" ]];                                          \
