Added DOT_PATH to Doxygen tagfile for developer documentation generation.  m04585
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7493 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/Object/Makefile
+++ b/isis/src/docsys/Object/Makefile
@@ -128,6 +128,12 @@ conf:
 	  echo "WARN_NO_PARAMDOC       = NO"                         >> build/Developer_temp.conf; \
 	fi
 
+	if [[ "$(DOT_PATH)" != "" ]];                                          \
+	then                                                                   \
+	  echo "DOT_PATH  = /opt/local/bin" >> build/Developer_temp.conf;     \
+	fi
+
+
 
 render: doApps doProg doDev
 doApps:
