Fixed makefile to work with totally clean tree.  m04585
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7497 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/Object/Makefile
+++ b/isis/src/docsys/Object/Makefile
@@ -44,6 +44,7 @@ documentation:
 
 assetsDir:
 	echo "        ...copying assets"
+	mkdir -p $(ISISROOT)/doc/Object
 	rsync -qlHptr --delete --rsh=ssh assets $(ISISROOT)/doc/Object/ 
 
 conf:
