Ensured cleanup of docbuild directory if Make aborted. m04585
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7498 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/Object/Makefile
+++ b/isis/src/docsys/Object/Makefile
@@ -170,6 +170,7 @@ clean:
 	rm -f  build/apps_tag_temp.conf 
 	rm -f  build/Programmer_temp.conf
 	rm -f  build/Developer_temp.conf 
+	rm -rf docbuild
 	rm -rf build/apps
 	rm -f ../documents/DocStyle/assets/isisDoxyDefs.doxydef
 	rm -f doxyWarnDeveloper.txt doxyWarnProgrammer.txt
