Fixed DOT_PATH setting. m04585
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7510 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/Object/Makefile
+++ b/isis/src/docsys/Object/Makefile
@@ -56,9 +56,9 @@ conf:
 	  echo "QUIET                  = NO"                         >> build/Programmer_temp.conf; \
 	fi
 
-	if [[ "$(DOT_PATH)" != "" ]];                                          \
-	then                                                                   \
-	  echo "DOT_PATH  = /opt/local/bin" >> build/Programmer_temp.conf;     \
+	if [[ "$(DOT_PATH)" != "" ]];                                      \
+	then                                                               \
+	  echo "DOT_PATH  = $(DOT_PATH)" >> build/Programmer_temp.conf;    \
 	fi
 
 	echo "        ...building Developer configuration"
@@ -73,9 +73,9 @@ conf:
 	  echo "QUIET                  = NO"                         >> build/Developer_temp.conf; \
 	fi
 
-	if [[ "$(DOT_PATH)" != "" ]];                                          \
-	then                                                                   \
-	  echo "DOT_PATH  = /opt/local/bin" >> build/Developer_temp.conf;     \
+	if [[ "$(DOT_PATH)" != "" ]];                                      \
+	then                                                               \
+	  echo "DOT_PATH  = $(DOT_PATH)" >> build/Developer_temp.conf;     \
 	fi
 
 
