Updated "make help" to document SHOWDOCWARNINGS. m04585
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7512 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/docsys/Object/Makefile
+++ b/isis/src/docsys/Object/Makefile
@@ -16,6 +16,7 @@ help:
 	echo "Isis Object Documentation Make System Commands"
 	echo "------------------------ "
 	echo "make docs      : Build Isis Object Documentation"
+	echo "                 SHOWDOCWARNINGS=1 will show doxygen warnings"
 	echo " "
 	echo "make wwwdocsrc : Sync Source to Public Web Server" 
 	echo "make devdocsrc : Sync Source to Development Web Server" 
