Updated tests for new MESSENGER kernels.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7571 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/ckwriter/tsts/messenger/Makefile
+++ b/isis/src/base/apps/ckwriter/tsts/messenger/Makefile
@@ -1,6 +1,6 @@
 APPNAME = ckwriter
 BASES    = $(basename $(notdir $(wildcard $(INPUT)/*.cub)))
-EXTRA    = $(shell ls -1t $(ISIS3DATA)/messenger/kernels/ck/*_mdis_pivot_pvtres.bc | head -1)
+EXTRA    = $(shell ls -1t $(ISIS3DATA)/messenger/kernels/ck/*_mdis_gm040819_150430v1.bc | head -1)
 
 
 include $(ISISROOT)/make/isismake.tsts
