Removed the APPLYSMEAR and PSF options from the amicacal application. The smear correction is still automatically applied when appropriate. Fixes #4609
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7575 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/hayabusa/apps/amicacal/tsts/smearCorrection/Makefile
+++ b/isis/src/hayabusa/apps/amicacal/tsts/smearCorrection/Makefile
@@ -3,11 +3,15 @@ APPNAME = amicacal
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(APPNAME) \
-	FROM=$(INPUT)/st_2433548889_w.cub \
-	TO=$(OUTPUT)/smearCorrected_nsubimages2_st_2433548889_w.cub \
-	applysmear=yes nullpolarpix=no >/dev/null;\
+	# Test application of smear removal for SubImageCount = 1
 	$(APPNAME) \
 	FROM=$(INPUT)/st_2539482843_v.cub \
 	TO=$(OUTPUT)/smearCorrected_nsubimages1_st_2539482843_v.cub.cub \
 	nullpolarpix=no > /dev/null;
+
+	# Test NON-application of smear removal for SubImageCount = 2
+	$(APPNAME) \
+	FROM=$(INPUT)/st_2433548889_w.cub \
+	TO=$(OUTPUT)/notSmearCorrected_nsubimages2_st_2433548889_w.cub \
+	nullpolarpix=no >/dev/null;\
+
