Added a results group for PDS projection offsets if changed from defaults Fixes #4887
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7809 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/kaguya/apps/mimap2isis/tsts/default/Makefile
+++ b/isis/src/kaguya/apps/mimap2isis/tsts/default/Makefile
@@ -8,3 +8,5 @@ commands:
 	$(APPNAME) from=$(INPUT)/MI_MAP_02_N65E328N64E329SC.img \
 	  to=$(OUTPUT)/MI_MAP_02_N65E328N64E329SC.cub > /dev/null;
 	  catlab from=$(OUTPUT)/MI_MAP_02_N65E328N64E329SC.cub to=$(OUTPUT)/labels.txt > /dev/null;
+	  catlab from=$(OUTPUT)/MI_MAP_02_N65E328N64E329SC.cub \
+	  to=$(OUTPUT)/MI_MAP_02_N65E328N64E329SCTruth.pvl > /dev/null;
