--- a/isis/src/mro/apps/crism2isis/tsts/mrdr/Makefile
+++ b/isis/src/mro/apps/crism2isis/tsts/mrdr/Makefile
@@ -4,6 +4,11 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/t1865_mrrde_70n185_0256_1.lbl \
-	to=$(OUTPUT)/mrdrtruth.cub > /dev/null;
+	to=$(OUTPUT)/mrdrtruth.cub \
+	  | $(SED) 's+.*% Processed.*#+#+' \
+	  | grep -v "Processed" \
+	  | grep -v "Working" \
+	  | grep -v "Importing" \
+	  >& $(OUTPUT)/resultsLog.pvl;
 	catlab from=$(OUTPUT)/mrdrtruth.cub \
 	to=$(OUTPUT)/mrdrtruth.pvl > /dev/null;
