--- a/isis/src/mro/apps/crism2isis/tsts/ddr/Makefile
+++ b/isis/src/mro/apps/crism2isis/tsts/ddr/Makefile
@@ -4,10 +4,11 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/frt00003e25_01_de156l_ddr1.lbl \
-	to=$(OUTPUT)/ddrtruth.cub \
+	to=$(OUTPUT)/ddrTruth.cub \
 	  | $(SED) 's+.*% Processed.*#+#+' \
 	  | grep -v "Processed" \
 	  | grep -v "Working" \
 	  | grep -v "Importing" \
 	  >& $(OUTPUT)/resultsLog.pvl;
+	  catlab from=$(OUTPUT)/ddrTruth.cub to=$(OUTPUT)/ddrTruth.pvl;
 
