PROG:  Updated Makefiles for cnetcombinept so that ControlNetworks will be output as PVL files (so that *pvl.DIFF can be applied for the truth-output comparison).  References #4870,4722,4869
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7833 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/control/apps/cnetcombinept/tsts/duplicates/Makefile
+++ b/isis/src/control/apps/cnetcombinept/tsts/duplicates/Makefile
@@ -6,5 +6,8 @@ commands:
 	$(CP) $(INPUT)/*.net $(OUTPUT)
 	$(APPNAME) cnetbase=$(INPUT)/Extract_thmir_dups.net \
 	onet=$(OUTPUT)/testout_Extract_thmir_dups.net > /dev/null;
+	cnetbin2pvl from=$(OUTPUT)/testout_Extract_thmir_dups.net \
+				to=$(OUTPUT)/testout_Extract_thmir_dups.pvl \
+				> /dev/null;
 
-	$(RM) $(OUTPUT)/Extract_thmir_dups.net;
+	$(RM) $(OUTPUT)/*.net;
