--- a/isis/src/control/apps/cnetcombinept/tsts/setapriori/Makefile
+++ b/isis/src/control/apps/cnetcombinept/tsts/setapriori/Makefile
@@ -11,5 +11,8 @@ commands:
 	           imagetol=1000.0 \
 	           setaprioribest=true \
 	           > /dev/null;
+	cnetbin2pvl from=$(OUTPUT)/Equi065S355ED10.net to=$(OUTPUT)/Equi065S355ED10.pvl \
+			   > /dev/null;
 
 	$(RM) $(OUTPUT)/networks.lis;
+	$(RM) $(OUTPUT)/*.net
