Modified Makefiles to make label comparisons Fixes #4941
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7842 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/messenger/apps/mdis2isis/tsts/orbit/Makefile
+++ b/isis/src/messenger/apps/mdis2isis/tsts/orbit/Makefile
@@ -6,3 +6,5 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/EN0215850728M.IMG \
 	  to=$(OUTPUT)/EN0215850728M.cub > /dev/null
+	catlab from=$(OUTPUT)/EN0215850728M.cub \
+	  to=$(OUTPUT)/EN0215850728M.pvl> /dev/null
