--- a/isis/src/newhorizons/apps/leisa2isis/tsts/qualityReplacement/Makefile
+++ b/isis/src/newhorizons/apps/leisa2isis/tsts/qualityReplacement/Makefile
@@ -4,6 +4,9 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/lsb_0034931099_0x53c_sci_1.fit \
-	to=$(OUTPUT)/lsb_0034931099_0x53c_sci_1.fit.cub \
-	replace=yes > /dev/null; 
+	  to=$(OUTPUT)/lsb_0034931099_0x53c_sci_1.fit.cub \
+	  replace=yes > /dev/null; 
+	catlab from=$(OUTPUT)/lsb_0034931099_0x53c_sci_1.fit.cub \
+	  to=$(OUTPUT)/lsb_0034931099_0x53c_sci_1.fit.pvl> /dev/null
+
 
