PROG: Improved test coverage and coding standards as a training exercise.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7894 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/stats/tsts/default/Makefile
+++ b/isis/src/base/apps/stats/tsts/default/Makefile
@@ -4,6 +4,18 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/isisTruth.cub \
-	  to=$(OUTPUT)/stats.pvl > /dev/null;
+	           to=$(OUTPUT)/stats.pvl > /dev/null;
 	$(APPNAME) from=$(INPUT)/isisTruth.cub \
-	  validmin=-20 validmax=20 to=$(OUTPUT)/stats2.pvl > /dev/null;
+	           validmin=-20 \
+	           validmax=20 \
+	           to=$(OUTPUT)/stats2.pvl \
+	           > /dev/null;
+	$(APPNAME) from=$(INPUT)/isisTruth.cub \
+	           to=$(OUTPUT)/stats3.pvl \
+	           append=false \
+	           > /dev/null;
+	  
+	$(APPNAME) from=$(INPUT)/isisTruth.cub \
+	           | grep -v stats \
+	           | grep -v Processed \
+	           >& $(OUTPUT)/output.pvl;
