Modified vik2isis and voy2isis to compare labels when testing. #Fixes 4943, 4944
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@7966 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/viking/apps/vik2isis/tsts/img/Makefile
+++ b/isis/src/viking/apps/vik2isis/tsts/img/Makefile
@@ -4,3 +4,5 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/f319b18.imq to=$(OUTPUT)/vik2isis-imgTruth.cub > /dev/null;
+	
+	catlab from=$(OUTPUT)/vik2isis-imgTruth.cub to=$(OUTPUT)/vik2isis-imgTruth.pvl > /dev/null;
