--- a/isis/src/viking/apps/vik2isis/tsts/imq/Makefile
+++ b/isis/src/viking/apps/vik2isis/tsts/imq/Makefile
@@ -4,3 +4,6 @@ include $(ISISROOT)/make/isismake.tsts
 
 commands:
 	$(APPNAME) from=$(INPUT)/f319b18.imq to=$(OUTPUT)/vik2isis-imqTruth.cub > /dev/null;
+	
+	catlab from=$(OUTPUT)/vik2isis-imqTruth.cub to=$(OUTPUT)/vik2isis-imqTruth.pvl > /dev/null;
+
