Fixed issue with alphacube propagation during ifft. noproj no longer propagates the alphacube group. Fixes #4907.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@8000 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/noproj/tsts/default/Makefile
+++ b/isis/src/base/apps/noproj/tsts/default/Makefile
@@ -1,5 +1,6 @@
 APPNAME = noproj
 #This file exercises the default options
+# Also tests that the AlphaCube group is removed when noproj is run.
 
 # Maintains accuracy across systems to 3 sig figs
 PSP_001414_1780_RED5.balance.cropped.noproj.cub.TOLERANCE = 1.1
@@ -9,4 +10,6 @@ include $(ISISROOT)/make/isismake.tsts
 commands:
 	$(APPNAME) from=$(INPUT)/PSP_001414_1780_RED5.balance.cropped.cub \
 	to=$(OUTPUT)/PSP_001414_1780_RED5.balance.cropped.noproj.cub > /dev/null;
+	catlab from=$(OUTPUT)/PSP_001414_1780_RED5.balance.cropped.noproj.cub \
+	  > $(OUTPUT)/PSP_001414_1780_RED5.balance.cropped.noproj.pvl;
 	$(RM) print.prt > /dev/null;
