PROG: Fixed makefile file for noproj default test so it doesn't fail. References #4907.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@8001 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/apps/noproj/tsts/default/Makefile
+++ b/isis/src/base/apps/noproj/tsts/default/Makefile
@@ -11,5 +11,8 @@ commands:
 	$(APPNAME) from=$(INPUT)/PSP_001414_1780_RED5.balance.cropped.cub \
 	to=$(OUTPUT)/PSP_001414_1780_RED5.balance.cropped.noproj.cub > /dev/null;
 	catlab from=$(OUTPUT)/PSP_001414_1780_RED5.balance.cropped.noproj.cub \
+	  > $(OUTPUT)/PSP_001414_1780_RED5.balance.cropped.noproj.pvl.tmp;
+	$(SED) 's+/.*/input/+input/+' $(OUTPUT)/PSP_001414_1780_RED5.balance.cropped.noproj.pvl.tmp \
 	  > $(OUTPUT)/PSP_001414_1780_RED5.balance.cropped.noproj.pvl;
+	$(RM) $(OUTPUT)/PSP_001414_1780_RED5.balance.cropped.noproj.pvl.tmp;
 	$(RM) print.prt > /dev/null;
