Updated the OSIRIS-REx ingestion app (ocams2isis) to read NAIF frame code for PolyCam directly from the input label. Fixes #5128
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@8026 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/osirisrex/apps/ocams2isis/tsts/polycam/Makefile
+++ b/isis/src/osirisrex/apps/ocams2isis/tsts/polycam/Makefile
@@ -2,10 +2,11 @@
 #
 # @history 2016-09-09 Jeannie Backer - Original version. 
 #
+APPNAME = ocams2isis
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	ocams2isis $(TSTARGS)                                               \
+	$(APPNAME) $(TSTARGS)                                               \
 	           from=$(INPUT)/2019-01-13T23_35_59.000_PCAM_L2b_V001.fits \
 	           to=$(OUTPUT)/2019-01-13T23_35_59.000_PCAM_L2b_V001.cub   \
 	           >& /dev/null;
