--- a/isis/src/osirisrex/apps/ocams2isis/tsts/mapcam/Makefile
+++ b/isis/src/osirisrex/apps/ocams2isis/tsts/mapcam/Makefile
@@ -2,10 +2,11 @@
 #
 # @history 2016-09-09 Jeannie Backer - Original version.
 #
+APPNAME = ocams2isis
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	ocams2isis $(TSTARGS)                      \
+	$(APPNAME) $(TSTARGS)                      \
 	           from=$(INPUT)/D19030320000.fits \
 	           to=$(OUTPUT)/D19030320000.cub   \
 	           >& /dev/null;
