PROG: Updated osiris rex cat test makefile to add cube tolerance for macs
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@8097 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/osirisrex/tsts/mapcam/Makefile
+++ b/isis/src/osirisrex/tsts/mapcam/Makefile
@@ -9,7 +9,7 @@
 # @history 2017-08-29 Jeannie Backer - Updated to new test cube that has pre-processing 
 #                         flip applied.
 #
-#20190303T100344S990_map_iofL2pan_V001-cam2map_equi.cub.TOLERANCE = 1e-03
+20190303T100344S990_map_iofL2pan_V001-cam2map_equi.cub.TOLERANCE = 1e-03
 
 include $(ISISROOT)/make/isismake.tsts
 
