PROG: Fixed the RayTracingShapeModel category test.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@8205 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/base/tsts/RayTracingShapeModel/Makefile
+++ b/isis/src/base/tsts/RayTracingShapeModel/Makefile
@@ -1,13 +1,15 @@
 INGEST = msi2isis
 SPICEINIT = spiceinit
 PROJECT = cam2map
-COPY = /usr/bin/cp
-REMOVE = /usr/bin/rm
+COPY = /bin/cp
+REMOVE = /bin/rm
 
 IMAGE = m0132383354f4_2p_iof_dbl
 DSK = ErosHR.bds
 MAP = simp_planetocentric_50k.map
 
+$(IMAGE)_Bullet_SC.cub.TOLERANCE = 0.00001
+$(IMAGE)_Standard_SC.cub.TOLERANCE = 0.00001
 
 include $(ISISROOT)/make/isismake.tsts
 
