PROG: Fixed the file limit error with JunoCam category test.
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@8221 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/src/juno/tsts/junocam/Makefile
+++ b/isis/src/juno/tsts/junocam/Makefile
@@ -6,10 +6,15 @@ MOSAIC    = automos
 INPUTFILE = JNCR_2016346_03C00104_V01
 MAP       = juno_pp.map
 
+# These images are uncalibrated 16-bit, so the differences are
+# whole numbers, hence the high tolerance.
+$(INPUTFILE)_FULLCCD_GREEN_PP.cub.TOLERANCE = 5.0
+$(INPUTFILE)_RED_PP.cub.TOLERANCE = 5.0
+
 include $(ISISROOT)/make/isismake.tsts
 
 commands:
-	$(IMPORT) $(TSTARGS) from=$(INPUT)/$(INPUTFILE).LBL \
+	ulimit -n 514 && $(IMPORT) $(TSTARGS) from=$(INPUT)/$(INPUTFILE).LBL \
 		  to=$(OUTPUT)/$(INPUTFILE).cub > /dev/null;
 	$(IMPORT) $(TSTARGS) from=$(INPUT)/$(INPUTFILE).LBL \
 		  to=$(OUTPUT)/$(INPUTFILE)_FULLCCD.cub fullccd=yes \
